# baiteck-pdm-flotas

./: .gitignore  00_VERIFICAR_ANTES_DE_TODO.py  01_VERIFICAR_ESQUEMA_ACTIVOS.py  01_agregar_contraseña_a_usuarios.sql  01_restaurar_activos.py  02_restaurar_repuestos_maestro.py  03_demanda_p1p2.py  03_reconstruir_modo_falla.py  04_reconstruir_taxonomia_fallas.py  Copia de calcular_paneles.py  Copia de dashboard 2.py  Copia de dashboard.py  DATABASE_SCHEMA.md  EDO.bat  README.md  actualizar_repuestos_diario.py  analizar_activo.py  analizar_feedback_taller.py  autenticacion_v2.py  backup_paneles.py  borrar_ultima_ot.py  calcular_consumo_historico.py  calcular_metricas_vista3.py  calcular_paneles.py  calcular_paneles_back.py  carga_datos_ordenado.py  cargar_ot.py  check_metricas.py  clasificar_fallas.py  crear_disponibilidad_diaria_FULL.py  crear_disponibilidad_diaria_INCREMENTAL.py  crear_usuarios.py  dash.py  dashboard.py  dashboard_18_jun.py  dashboard_19_june.py  dashboard_22_05_com.py  dashboard_com.py  dashboard_v2.0.backup.py  disponibilidad_diaria.py  (+31 more)
.streamlit/: secrets.toml
01-programas de carga/: 01_carga_consumo.py  02_consumo_sku.py  04_ajuste_diario.py  diag_consumo.py
RES_mpmf/: GUIA_RESPALDO_RESTAURACION.md  RESPALDO_SQL_COMANDOS.sql  restaurar_base_datos.py
TRASH/: dashboard.py.bak  db.py  main.py  main_old.py  predictor.py.bak  scoring_diario.py
models/: feature_importance_rf_v1.0.csv  feature_importance_xgb_v1.0.csv  metadata_rf_v1.0.json  metadata_xgb_v1.0.json  metadata_xgb_v1.0_h30.json  metadata_xgb_v1.0_h7.json  metadata_xgb_v1.0_h90.json
(+64 files in other folders)
