[project]
name = "baiteck-pdm-flotas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "ipykernel>=6.31.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.6.1",
    "shap>=0.49.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.50.0",
    "uvicorn>=0.39.0",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.13",
]
